--- a/items/itemgroup/itemgroup.phtml
+++ b/items/itemgroup/itemgroup.phtml
@@ -3,3 +3,10 @@
 
 
 
+<?php
+$customrecordstatus = __DIR__.'/itemgroup-customrecordstatus.phtml'; 
+if (is_file($customrecordstatus)) {
+	include $customrecordstatus;
+} else { ?>
+
+<?php } ?>
