--- a/items/itemstock/itemstock-list.phtml
+++ b/items/itemstock/itemstock-list.phtml
@@ -44,16 +44,16 @@
 					<th mapping="itemstock_id">itemstock_id</th>
 					<th mapping="itemstock_code">itemstock_code</th>
 					<th mapping="itemstock_name">itemstock_name</th>
-					<th mapping="itemstock_isdisabled" type="checkbox">itemstock_isdisabled</th>
 					<th mapping="dept_name">dept_name</th>
+					<th mapping="itemstock_isdisabled" type="checkbox">itemstock_isdisabled</th>
 
 				</tr>
 				<tr style="background-color: #cccccc; height: 30px">
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">ID</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Uniq Code</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Nama Item</td>
+					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Owner Dept</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000; text-align: center">Disabled</td>
-					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Dept</td>
 
 				</tr>
 			</thead>
