--- a/items/itemclass/itemclass-filesform.phtml
+++ b/items/itemclass/itemclass-filesform.phtml
@@ -1,9 +1,9 @@
 <div id="pnl_editfilesform">
 	<div class="fgta-page-title" style="display: flex; align-items: center ">
-		<div>Edit Files</div>
+		<div id="pnl_editfilesform-caption">{{STATE_BEG}}Files{{STATE_END}}</div>
 		<a id="pnl_editfilesform-btn_edit" href="javascript:void(0)" class="easyui-linkbutton fgta-button-edit" style="margin-left:10px;" data-options="plain:true,iconCls:'fgta-icon-edit'">edit</a>
 	</div>
-	<div id="pnl_editfilesform-title" style="margin-top: 0px; margin-bottom: 30px; font-weight: bold; font-size: 1.2em">XXXXXXX</div>
+	<div id="pnl_editfilesform-title" class="fgta-page-subtitle">XXXXXXX</div>
 
 
 	<form id="pnl_editfilesform-form">
@@ -77,21 +77,26 @@
 	</div>	
 
 
-
-	<div style="margin-top: 30px; margin-left:-5px; margin-right: -5px; background-color: #cccccc; height: 40px; display: flex; justify-content: space-between; padding: 5px 2px 2px 2px ">
-		<div>
+	<?php
+	$custombuttonbar = __DIR__.'/itemclass-filesform-custombuttonbar.phtml';
+	if (is_file($custombuttonbar)) {
+		include $custombuttonbar;
+	} else { ?>
+	<div id="pnl_editfilesform-buttonbar" style="margin-top: 30px; margin-left:-5px; margin-right: -5px; background-color: #cccccc; height: 40px; display: flex; justify-content: space-between; padding: 5px 2px 2px 2px ">
+		<div id="pnl_editfilesform-buttonbar-left">
 			<a id="pnl_editfilesform-btn_prev" class="easyui-linkbutton c8 fgta-button-detilprev" style="width: 50px">Prev</a>
 			<a id="pnl_editfilesform-btn_next" class="easyui-linkbutton c8 fgta-button-detilnext" style="width: 50px">Next</a>
 		</div>
 
-		<div>
+		<div id="pnl_editfilesform-buttonbar-middle">
 			<a id="pnl_editfilesform-btn_addnew" class="easyui-linkbutton c8 fgta-button-detiladd" style="width: 100px">Tambah Baru</a>
 		</div>
 
-		<div>
+		<div id="pnl_editfilesform-buttonbar-right">
 			<a id="pnl_editfilesform-btn_delete" class="easyui-linkbutton c5" style="width: 100px">Hapus</a>
 		</div>
 	</div>
+	<?php } ?>
 
 
 
