--- a/items/itemclass/itemclass-filesgrid.phtml
+++ b/items/itemclass/itemclass-filesgrid.phtml
@@ -1,6 +1,6 @@
 <div id="pnl_editfilesgrid">
 	<div class="fgta-page-title">Daftar Files</div>
-	<div id="pnl_editfilesgrid-title" style="margin-top: 0px; margin-bottom: 30px; font-weight: bold; font-size: 1.2em">XXXXXXX</div>
+	<div id="pnl_editfilesgrid-title" class="fgta-page-subtitle">XXXXXXX</div>
 
 	<!--// Untuk keperluan search di detil
 	<div id="pnl_editfilesgrid-pnl_head" style="display: flex; align-items: flex-end">
@@ -42,7 +42,7 @@
 					<th mapping=""></th>
 				</tr>
 				<tr style="background-color: #cccccc; height: 30px">
-<td class="fgtable-head" style="width: 30px; border-bottom: 1px solid #000000; text-align: center">*</td>
+<td class="fgtable-head rowcheck" style="width: 30px; border-bottom: 1px solid #000000; text-align: center">*</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">ID</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Document Type</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Descr</td>
@@ -51,6 +51,14 @@
 				</tr>
 			</thead>
 			<?php } ?>
+			
+			<?php
+			$tablefooter = __DIR__.'/itemclass-filesgrid-tablefooter.phtml';
+			if (is_file($tablefooter)) {
+				include $tablefooter;
+			} 
+			?>
+			
 		</table>
 	</div>
 
