--- a/items/itemclass/itemclass-list.phtml
+++ b/items/itemclass/itemclass-list.phtml
@@ -48,7 +48,7 @@
 				</tr>
 				<tr style="background-color: #cccccc; height: 30px">
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">ID</td>
-					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Item Class</td>
+					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000">Item Class Name</td>
 					<td class="fgtable-head" style="width: 100px; border-bottom: 1px solid #000000; text-align: center">Disabled</td>
 
 				</tr>
